# prototype-patterns

./: .gitignore  LICENSE  README.md  run-all-tests.sh
csharp/: README.md
integration-prototypes/: README.md
java/: README.md
nodejs/: README.md
python/: README.md
python/patterns/: README.md  pyproject.toml
python/patterns/scripts/: run-pattern.sh
python/patterns/src/prototype_patterns/: __init__.py  __main__.py  pattern_runner.py
python/patterns/src/prototype_patterns/behavioral/: __init__.py  chain_of_responsibility.py  command.py  iterator.py  mediator.py  memento.py  observer.py  state.py  strategy.py  template_method.py
python/patterns/src/prototype_patterns/creational/: __init__.py  abstract_factory.py  builder.py  factory_method.py  lazy_initialization.py  object_pool.py  prototype.py  singleton.py
python/patterns/src/prototype_patterns/structural/: __init__.py  adapter.py  bridge.py  composite.py  composite_entity.py  decorator.py  facade.py  flyweight.py  proxy.py
python/patterns/tests/: test_patterns.py  test_patterns_unittest.py
python/services/hello-world-logger/: Dockerfile  README.md  pyproject.toml
python/services/hello-world-logger/infra/compose/: docker-compose.yml
python/services/hello-world-logger/infra/docker/: run.sh
python/services/hello-world-logger/infra/k8s/: ingress.yaml  kustomization.yaml  namespace.yaml  nodeport.yaml  web-deployment.yaml
python/services/hello-world-logger/src/: app.py
python/services/hello-world-logger/tests/: test_app.py
scripts/: run-pattern.sh
tests/: test_infra_health_checks.py
(+527 files in other folders)
